--- a/static/contact.html
+++ b/static/contact.html
@@ -85,7 +85,7 @@
               <!-- Row -->
               <div class="row">
                 <div class="col-md-12">
-                  <img src="assets/file.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
+                  <img src="assets/IMG_20240327_102142.jpg" alt="wrapkit" class="img-fluid rounded-circle" />
                 </div>
                 <div class="col-md-12 text-center">
                   <div class="pt-2">
